homeautomation/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      deployment: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: iot-vlan
      labels:
        deployment: esphome
    spec:
      containers:
        - command:
            - esphome
            - dashboard
            - /config/esphome/
          image: esphome/esphome:2023.11
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /version
              port: 6052
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: esphome

          ports:
            - containerPort: 6052
              name: esphome-http
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 2048Mi
              cpu: "2"
          volumeMounts:
            - mountPath: /config
              name: esphome-config
            - mountPath: /cache
              name: esphome-cache
        - name: code-server
          image: code-server
          volumeMounts:
            - mountPath: /home/coder/
              name: esphome-config
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 128Mi
              cpu: 10m
          ports:
            - containerPort: 8080
              name: codeserver-http
              protocol: TCP
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: esphome-config
          persistentVolumeClaim:
            claimName: esphome-config
        - name: esphome-cache
          emptydir: {}
status: {}
