homeautomation/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  ports:
    - name: esphome-http
      port: 6052
      protocol: TCP
      targetPort: 6052
    - name: code-server-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: {}
  sessionAffinity: None
  type: ClusterIP
